# grafikatmp

./: CMakeLists.txt  GUI.cpp  GUI.h  GUIMyFrame1.cpp  GUIMyFrame1.h  Makefile  graph.hpp  main.cpp  main_test.cpp  minimalize.cpp  minimalize.hpp  rotate.cpp  rotate.hpp  sup_classes.hpp
